--- a/source/boot/index.html
+++ b/source/boot/index.html
@@ -36,7 +36,7 @@
     }
   </style>
 
-  <title>eduAnat2</title>
+  <title>EduAnat2</title>
   <noscript>
     <meta http-equiv="refresh" content="0; url=nojs.html"/>
   </noscript>
