-change wait label to french -filter file list depending on case : anat or functionnal

--- a/source/boot/index.html
+++ b/source/boot/index.html
@@ -66,7 +66,7 @@ div.loading-visible{
  </head>
 <body>
 <div id="loading" class="loading-visible">
-  <p>Loading, please wait...</p>
+  <p>Chargement, veuillez patienter...</p>
 </div>
   <script type="text/javascript" src="${appPath}bundle.js"></script>
   ${preBootJs}
