add EduAnat2 icon

--- a/source/boot/index.html
+++ b/source/boot/index.html
@@ -45,6 +45,7 @@ div.loading-visible{
   <!-- Shortcut icon setup -->
   <link rel="shortcut icon" type="image/png" href="${resourcePath}eduAnat2/favicon.png"/>
   <link rel="mask-icon" href="${resourcePath}eduAnat2/favicon.png"/>
+  <link rel="icon" href="icon.png"/>
 
   <style>
     body {
