--- a/source/boot/index.html
+++ b/source/boot/index.html
@@ -22,6 +22,11 @@ div.loading-visible{
 	width:100%;
 	text-align:center;
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 </style>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -67,6 +72,7 @@ div.loading-visible{
  </head>
 <body>
 <div id="loading" class="loading-visible">
+  <img src="splash.png" alt="EduAnat2" class="center">
   <p>Chargement, veuillez patienter...</p>
 </div>
   <script type="text/javascript" src="${appPath}bundle.js"></script>
